GNOME Bugzilla – Bug 655561
Nautilus change request: The "keep aligned" property of the Desktop/nautilus should not be saved over sessions
Last modified: 2011-09-13 02:02:07 UTC
If I change the "keep aligned" property of the desktop, this switch is not saved for the next session: it's always set to "keep aligned" by the next login (it is only valid for the current session). It should be saved and valid for all future sessions, until changed. Kind regards Joachim Backes
Hi Joachim, which Nautilus version is this about?
For example all nautiluses in Fedora 14, 15 and 16. In my current Fedora 16, it's nautilus-3.1.4-1.fc16.x86_64.
Thanks for the report, I pushed a fix for this to git master now. Closing as fixed.